# Lyf-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
apps/diary/: admin.py  enums.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/diary/migrations/: 0001_initial.py
apps/todo/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
constants/: response_constants.py
enums/: response_type.py
globals/: variables.py
handlers/: exception_handler.py  pagination_handler.py  response_handler.py
lyf_backend/: asgi.py  settings.py  urls.py  wsgi.py
services/compress/: compressors.py
services/firebase/: auth.py  initializer.py  store.py
services/reportlab/: entry_exports.py
static/templates/: 404.html  500.html
user/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
